<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:clickable="true"
              android:orientation="vertical"
              android:background="#FCFAF8"
              tools:context=".fragment.ProviderListing">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
    >

        <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/rv_storage_list"
                                                   android:layout_marginTop="10dp"
                                                   android:layout_marginLeft="10dp"
                                                   android:overScrollMode="never"
                                                   android:scrollbars="none"
                                                   android:layout_marginRight="10dp"
        >

        </androidx.recyclerview.widget.RecyclerView>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="60dp"
                      android:layout_alignParentBottom="true"
                      android:background="@color/colorWhite"
                      android:orientation="horizontal"
                      android:weightSum="1"
        >
            <LinearLayout android:layout_width="0dp"
                          android:layout_weight=".33"
                          android:orientation="vertical"
                          android:layout_height="wrap_content"
            >


                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="match_parent"

                >


                    <ImageView android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:src="@mipmap/ft_location"
                               android:id="@+id/iv_location"
                              android:layout_centerInParent="true"
                               android:tint="@color/colorPinkApp"
                               android:layout_marginRight="5dp"
                               android:layout_toLeftOf="@id/tv_location"
                    />

                    <com.zipstored.com.LatoRegularTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:layout_centerInParent="true"
                            android:textColor="@color/colorPinkApp"
                            android:id="@+id/tv_location"
                    />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorPinkApp"/>
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_weight=".33"
                          android:gravity="center"
                          android:layout_gravity="center"
                          android:id="@+id/ll_filter"
            >
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@mipmap/ft_filter"
                           android:layout_marginRight="5dp"
                />
                <com.zipstored.com.LatoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                />

            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_weight=".33"
                          android:gravity="center"
                          android:layout_gravity="center"
            >
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@mipmap/ft_sort"
                           android:layout_marginRight="5dp"
                />
                <com.zipstored.com.LatoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort"
                />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>