<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".activity.SignInActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@color/colorWhite"
                  android:id="@+id/ll_login"
    >


        <com.zipstored.com.ArialRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello There !"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
                android:textSize="30dp"
                android:textColor="@color/colorBlack"
        />

        <com.zipstored.com.LatoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="25dp"
                android:textSize="17sp"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginLeft="25dp"
                      android:layout_marginTop="15dp"
                      android:layout_marginRight="25dp"
                      android:weightSum="1">


            <com.zipstored.com.LatoRegularEditTextView
                    android:layout_width="0dp"
                    android:layout_weight=".9"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#919191"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:cursorVisible="true"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:id="@+id/edt_email_address"

            />

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight=".1"
                    android:layout_gravity="right"
                    android:src="@mipmap/login_tick"
                    android:id="@+id/iv_email_valid"
                    android:visibility="gone"

            />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPinkLightApp"/>

        <com.zipstored.com.LatoRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="25dp"
                android:textSize="17sp"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginLeft="25dp"
                      android:layout_marginTop="15dp"
                      android:layout_marginRight="25dp"
                      android:weightSum="1">


            <com.zipstored.com.LatoRegularEditTextView
                    android:layout_width="0dp"
                    android:layout_weight=".95"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColorHint="#919191"
                    android:textColor="@color/colorBlack"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:id="@+id/edt_password"
            />

            <ToggleButton
                    android:id="@+id/tb_pass_eye"
                    android:layout_width="22dp"
                    android:layout_height="14dp"
                    android:background="@drawable/toggle_pass_eye"
                    android:textOff=""
                    android:textOn=""
                    android:checked="true"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
            />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorPinkLightApp"/>

        <com.zipstored.com.ArialRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:textColor="#333333"
                android:textSize="15sp"
                android:id="@+id/tv_pwd"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="normal"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/bt_login"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                android:elevation="15dp"
                android:stateListAnimator="@null"
                android:background="@drawable/curve_rectangle_gray"
        />


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
        >

            <com.zipstored.com.LatoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have account?"
                    android:textSize="14sp"
            />

            <com.zipstored.com.LatoBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sign_up"
                    android:text="  Sign Up"
                    android:textSize="15sp"
                    android:textColor="@color/colorPinkApp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
            />


        </LinearLayout>
    </LinearLayout>

    <ImageView android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_below="@+id/ll_login"
              android:scaleType="fitXY"
               android:src="@mipmap/house_background"
               android:layout_alignParentBottom="true"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="20dp"

    />
</RelativeLayout>